radix-engine-tests/tests/dec_macros/src/dec_err_empty_integral_part.stderr
error: If there is a decimal point, the number must include at least one digit before it. Use a 0 if necessary.
 --> src/dec_err_empty_integral_part.rs:4:29
  |
4 |     const X: Decimal = dec!(".0");
  |                             ^^^^
