radix-engine-tests/tests/dec_macros/src/dec_err_empty_integral_part.rs
use radix_engine_tests::prelude::*;

fn main() {
    const X: Decimal = dec!(".0");
}
